  segway identify GENOMEDATA TRAINDIR IDENTIFYDIR
  segway posterior GENOMEDATA TRAINDIR IDENTIFYDIR
  segway identify+posterior GENOMEDATA TRAINDIR IDENTIFYDIR

  Accordingly, have removed --no-train, --no-identify, --no-posterior, --directory

* segway: change --random-starts to --iterations
* segway: training now writes important file locations hyperparameters
  into TRAINDIR/train.tab

* segway: logs/run.sh is no longer flushed immediately. UUID is available from logs/segway.sh
* docs changed accordingly

0.2.7:

* all: display hint when trying to run on cluster
* segway-layer: add --track-line-set option
* segway-layer: produce layers for every specified mnemonic, even if empty
* segway-layer: reverse previous ordering, so lines show up in genome
  browser in same order as mnemonics file
* segway-layer: ignores lines that start with #

0.2.6:

* segway: SGE: fix bug where Viterbi jobs would immediately crash with
  a pthreads error when using recent versions of PyTables/numexpr

0.2.5:

* segway: fix bug where aborted jobs were not returning maxvmem/vmem info
* segway: make RuntimeError for edge of memory usage progression print
  troubleshooting information below traceback
* docs: add more troubleshooting info

0.2.4:

* segway: print error filename when failing due to end of memory progression
* segway: LSF: add -E /bin/true to submissions to avoid trivial job
  failures on broken hosts
* docs: fix a mistake on description of explicit length distribution

0.2.3:

* segway: new --tracks-from option allows specification of a filename
* segway: LSF: now selects and declares tmp disk space usage. This
  perhaps could be extended to SGE with some cluster administrator effort.
* segway-layer: fix bug where not all segment labels were in an input file
* segway: with --distribution=asinh_normal, starting covariance
  parameters are now asinh(variance). This fixes a bug with negative
  variances
* segway: fix bug where --split-sequences was ignored